2005-12-01  Murray Cumming <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: Add a newline after the 
	newin xrefitem, to stop doxgygen associating the following 
	text with the xrefitem, so properties and returns do not 
	show up in the list of new API.

2005-12-01  Murray Cumming <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Remove link to 
	non-existing drawing_area_text example. 
	Bug #311176 from Jonathon Jongsma.

2005-11-30  Murray Cumming <murrayc@murrayc.com>
 
 	* docs/index.html: Change deprecated link to link to 
 	deprecated and new pages page.
 	* gdk/src/gdk_docs_override.xml:
 	* gtk/src/gtk_docs_override.xml: Change Since: to 
 	our @newin tags.

2005-11-30  Murray Cumming <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: Added ALIASES 
	for @newin2p2, @newin2p4, @newin2p6, @newin2p8, and 
	@newin2p10. API marked with these tags will then be 
	listed together on a page. Doxygen already has @since, 
	but that does not list them on one page.
	* gdk/src/displaymanager.hg:
	* gtk/gtkmm/accelmap.h:
	* gtk/src/cellrenderer.hg:
	* gtk/src/clipboard.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/expander.hg:
	* gtk/src/filechooserwidget.hg:
	* gtk/src/messagedialog.hg:
	* gtk/src/radiotoolbutton.hg:
	* gtk/src/rc.hg:
	* gtk/src/uimanager.hg:
	* pango/src/fontset.hg: Replace any Since: text with 
	the new tags.

2005-11-30  Murray Cumming <murrayc@murrayc.com>

	* configure.in:
	* gtk/gtkmmconfig.h.in: Check for the mkifofs() 
	function (not available in windows, apparently), and 
	define HAVE_MKIFOFS.
	* examples/book/input/main.cc: Do not use mkifofs 
	if it is not present, to fix build on Windows.
	Bug #309031 from haleykd.

2005-11-30  Murray Cumming <murrayc@murrayc.com>

	* gtk/gtkmm/accelmap.cc:
	* gtk/gtkmm/accelmap.h: Added lookup_entry(), wrapping 
	gtk_accel_map_lookup_entry, based on code provided by 
	Paul Davis in bug #318407.

2005-11-30  Murray Cumming  <murrayc@murrayc.com>
