@@ -199,6 +199,7 @@ AC_LANG_POP(C++)
 #########################################################################
 gtkmm_min_glibmm_version=2.8.0
 gtkmm_min_gtk_version=2.8.0
+gtkmm_min_cairomm_version=0.1.0
 
 
 GLIBMM_PREFIX=`pkg-config --variable=prefix glibmm-2.4`
@@ -212,16 +213,16 @@ PKG_CHECK_MODULES(ATKMM, glibmm-2.4 >= ${gtkmm_min_glibmm_version} atk >= 1.9.0)
 AC_SUBST(ATKMM_CFLAGS)
 AC_SUBST(ATKMM_LIBS)
 
-PKG_CHECK_MODULES(PANGOMM, glibmm-2.4 >= ${gtkmm_min_glibmm_version} pango >= 1.5.2)
+PKG_CHECK_MODULES(PANGOMM, glibmm-2.4 >= ${gtkmm_min_glibmm_version} cairomm-1.0 >= ${gtkmm_min_cairomm_version} pango >= 1.5.2)
 AC_SUBST(PANGOMM_CFLAGS)
 AC_SUBST(PANGOMM_LIBS)
 
 # gdkmm really does need GTK+, because part of Gdk::DragContext is in GTK+.
-PKG_CHECK_MODULES(GDKMM, glibmm-2.4 >= ${gtkmm_min_glibmm_version} gtk+-2.0 >= ${gtkmm_min_gtk_version})
+PKG_CHECK_MODULES(GDKMM, glibmm-2.4 >= ${gtkmm_min_glibmm_version} cairomm-1.0 >= ${gtkmm_min_cairomm_version} gtk+-2.0 >= ${gtkmm_min_gtk_version})
 AC_SUBST(GDKMM_CFLAGS)
 AC_SUBST(GDKMM_LIBS)
 
-PKG_CHECK_MODULES(GTKMM, glibmm-2.4 >= ${gtkmm_min_glibmm_version} gtk+-2.0 >= ${gtkmm_min_gtk_version})
+PKG_CHECK_MODULES(GTKMM, glibmm-2.4 >= ${gtkmm_min_glibmm_version} cairomm-1.0 >= ${gtkmm_min_cairomm_version} gtk+-2.0 >= ${gtkmm_min_gtk_version})
 AC_SUBST(GTKMM_CFLAGS)
 AC_SUBST(GTKMM_LIBS)
 
