@@ -21,7 +21,7 @@
 #define _GDKMM_GENERAL_H
 
 #include <gdkmm/pixbuf.h>
-//#include <cairo.h>
+#include <cairomm/context.h>
 
 namespace Gdk
 {
@@ -37,14 +37,12 @@ void flush();
 namespace Cairo
 {
 
-typedef cairo_t* Context; //TODO: Replace this with a real wrapper, from a dependency.
-
-void set_source_color(Context& context, const Gdk::Color& color);
-void set_source_pixbuf(Context& context, const Glib::RefPtr<Gdk::Pixbuf>& pixbuf, double pixbuf_x, double pixbuf_y);
+void set_source_color(::Cairo::Context& context, const Gdk::Color& color);
+void set_source_pixbuf(::Cairo::Context& context, const Glib::RefPtr<Gdk::Pixbuf>& pixbuf, double pixbuf_x, double pixbuf_y);
 
 //TODO: Rename to add_rectangle_to_path?
-void rectangle(Context& context, const Gdk::Rectangle& rectangle);
-void region(Context& context, const Gdk::Region& region);
+void rectangle(::Cairo::Context& context, const Gdk::Rectangle& rectangle);
+void region(::Cairo::Context& context, const Gdk::Region& region);
 
 } //namespace Cairo
 
