@@ -29,6 +29,7 @@
 #include <gdkmm/region.h>
 #include <gdkmm/rgbcmap.h>
 #include <gdkmm/types.h>
+#include <cairomm/context.h>
 //#include <gdkmm/pixbuf.h>
 
 
@@ -161,8 +162,8 @@ public:
   _WRAP_METHOD(Glib::RefPtr<Display> get_display(), gdk_drawable_get_display, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Display> get_display() const, gdk_drawable_get_display, refreturn)
 
-  //From gdk/gdkcairo.h:
-  //TODO: Wrap cairo for C++: _WRAP_METHOD(cairo_t* create_cairo(), gdk_cairo_create)
+  #m4 _CONVERSION(`cairo_t*',`Cairo::Context',`Cairo::Context($3)')
+  _WRAP_METHOD(Cairo::Context create_cairo_context(), gdk_cairo_create)
 };
 
 } // namespace Gdk
