@@ -1,5 +1,13 @@
 2005-12-01  Murray Cumming <murrayc@murrayc.com>
 
+	* configure.in: Depend on cairomm.
+	* gdk/gdkmm/general.cc:
+	* gdk/gdkmm/general.h:
+	* gdk/src/drawable.hg: Use C++ Cairo:: types instead of 
+	C cairo_* types.
+
+2005-12-01  Murray Cumming <murrayc@murrayc.com>
+
 	* docs/reference/Doxyfile.in: Add a newline after the 
 	newin xrefitem, to stop doxgygen associating the following 
 	text with the xrefitem, so properties and returns do not 
